# geant4_eample_hp

./: CMakeLists.txt  primary.mac  primary_energy.C  read.C
include/: G4HumanPhantomAnalysisManager.hh  G4HumanPhantomEventAction.hh  G4HumanPhantomPrimaryGeneratorAction.hh
spenvis/: flux.raw  read.C  to_function.C
src/: G4HumanPhantomActionInitialization.cc  G4HumanPhantomAnalysisManager.cc  G4HumanPhantomConstruction.cc  G4HumanPhantomEventAction.cc  G4HumanPhantomPrimaryGeneratorAction.cc  G4HumanPhantomRunAction.cc
